[project]
name = "diffusion-pullback"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.4.0",
    "diffusers==0.11.0",
    "einops>=0.8.1",
    "huggingface-hub>=0.29.1",
    "matplotlib>=3.10.0",
    "numpy==1.24.3",
    "torch==2.1.0",
    "torchvision==0.16.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "xformers>=0.0.22.post7",
]
